# whitepoint-localization-universal-cpp

./: .gitignore  CMakeLists.txt  README.md  locale.cpp  localization.cpp  localization.h
example/: CMakeLists.txt  Makefile
example/locales/: en.json
example/src/: main.cpp
include/localization/: locale.h  localization.h  localization.tpp
src/: locale.cpp  localization.cpp
